fix for refactoring DocumentUploadClientApi with CaseDocumentClient. … (#502)
* fix for refactoring DocumentUploadClientApi with CaseDocumentClient. DocumentManagementUploader is updated but this class is not used or ex
tended by any other class

* update scanbase packages

* update gradle for test

* suppressing org.yaml:snakeyaml:1.26

* update tvtStringProvider

* update tvtStringProvider

* fix build failures

* fix build failures

* fix build failures

* Updates to fix build failures

* Updates to fix secure doc store client

* Bumping chart version/ fixing aliases

* Updates to fix build failures

* Updates to fix build failures

* Updates to fix test failures

* Updates to fix test failures

* Updates to fix test failures

* Updates to fix test failures

* Updates to suppress cves to allow build to happen

* fix for failing gradle build

* RIA-5804: reload jenkins build

* Bumping chart version/ fixing aliases

* RIA-5804: fixed vulnerabilities

* RIA-5804: upgraded java chart version

---------

Co-authored-by: rajeshthuraiyur <rajesh.thuraiyur@gmail.com>
Co-authored-by: rajeshthuraiyur <48379561+rajeshthuraiyur@users.noreply.github.com>
Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>
Co-authored-by: Javier Marin <fjavimarc@gmail.com>